<resources>
    <string name="app_name">PassOrFail</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="grade_calculation">Grade Calculation</string>
    <string name="mark1">Mark1</string>
    <string name="mark2">Mark2</string>
    <string name="mark3">Mark3</string>
    <string name="check">Check</string>
    <string name="check_button">Check Button</string>
    <string name="you_average">Your Average</string>
</resources>